--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -68,14 +68,21 @@
               <div class="main-item-img"><img src="img/decor/cloud.svg" alt="cloud" /></div>
 
               <div class="main-item-description">
-                <p>- content vector's image - Cloud</p>
+                <p>- decor vector's image - Cloud</p>
+              </div>
+            </div>
+            <div class="main-item">
+              <div class="main-item-img"><img src="img/content-icons/Shape.svg" alt="shape" /></div>
+
+              <div class="main-item-description">
+                <p>- content vector's design element - Shape</p>
               </div>
             </div>
             <div class="main-item">
               <div class="main-item-img"><img src="img/decor/star.svg" alt="star" /></div>
 
               <div class="main-item-description">
-                <p>- content vector's image - Star</p>
+                <p>- decor vector's image - Star</p>
               </div>
             </div>
             <div class="main-item">
@@ -91,7 +98,7 @@
               </div>
 
               <div class="main-item-description">
-                <p>- content vector's image - Facebook-Logo</p>
+                <p>- content vector's icon - Facebook-Logo</p>
               </div>
             </div>
             <div class="main-item">
@@ -100,7 +107,7 @@
               </div>
 
               <div class="main-item-description">
-                <p>- content vector's image - Instagram-Logo</p>
+                <p>- content vector's icon - Instagram-Logo</p>
               </div>
             </div>
             <div class="main-item">
@@ -109,34 +116,34 @@
               </div>
 
               <div class="main-item-description">
-                <p>- content vector's image - Twiter-Logo</p>
+                <p>- content vector's icon - Twiter-Logo</p>
               </div>
             </div>
           </div>
           <div class="logo-icons">
             <div class="logo-icons-container">
               <h2 class="logo-icons-title">
-                Different logo
-                <a href="https://en.wikipedia.org/wiki/Vector_graphics" target="_blank"
-                  ><span>vector's</span></a
+                Different
+                <a href="https://en.wikipedia.org/wiki/Raster_graphics" target="_blank"
+                  ><span>rastor's</span></a
                 >
-                images
+                images, converted from <a href="https://uk.wikipedia.org/wiki/PNG" target="_blank"><span>PNG</span></a href="https://en.wikipedia.org/wiki/Portable_Network_Graphics"> format to <a href="https://en.wikipedia.org/wiki/WebP" target="_blank"><span>WebP</span></a href="https://en.wikipedia.org/wiki/WebP" target="_blank"> format
               </h2>
               <div class="logo-icons-body">
                 <div class="logo-icons-item">
-                  <img src="img/logo-icons/digital.svg" alt="digital" />
+                  <img src="img/logo-icons/digital.webp" alt="digital" />
                 </div>
                 <div class="logo-icons-item">
-                  <img src="img/logo-icons/fuzion.svg" alt="fuzion" />
+                  <img src="img/logo-icons/fuzion.webp" alt="fuzion" />
                 </div>
                 <div class="logo-icons-item">
-                  <img src="img/logo-icons/media.svg" alt="media" />
+                  <img src="img/logo-icons/media.webp" alt="media" />
                 </div>
                 <div class="logo-icons-item">
-                  <img src="img/logo-icons/travel.svg" alt="travel" />
+                  <img src="img/logo-icons/travel.webp" alt="travel" />
                 </div>
                 <div class="logo-icons-item">
-                  <img src="img/logo-icons/vartex.svg" alt="vartex" />
+                  <img src="img/logo-icons/vartex.webp" alt="vartex" />
                 </div>
               </div>
             </div>
@@ -148,7 +155,7 @@
                 <a href="https://en.wikipedia.org/wiki/Raster_graphics" target="_blank"
                   ><span>raster's</span></a
                 >
-                images
+                content's images converted from <a href="https://en.wikipedia.org/wiki/JPEG" target="_blank"><span>JPG</span></a> format to <a href="https://en.wikipedia.org/wiki/WebP" target="_blank"><span>WebP</span></a > format
               </h2>
               <div class="images-body">
                 <div class="images-item">
