--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -16,107 +16,91 @@
         </div>
       </header>
       <main>
-        <div class="portfolio ">
+        <div class="portfolio">
           <div class="portfolio__container">
-            <div class="portfoloi__header header-page">
-              <div class="header-page__lable lable">Portfolio</div>
-              <h2 class="header-page__title title">Latest Work</h2>
+            <div class="portfolio__header page-header">
+              <div class="page-header__lable">Portfolio</div>
+              <h2 class="page-header__title">Latest Work</h2>
+
+              <ul class="tabs">
+                <li class="tabs__item tabs__item--active">Show All <sup>14</sup></li>
+                <li class="tabs__item">Design <sup>6</sup></li>
+                <li class="tabs__item">Branding <sup>4</sup></li>
+                <li class="tabs__item">Illustration <sup>3</sup></li>
+                <li class="tabs__item">Motion <sup>1</sup></li>
+              </ul>
             </div>
-            <ul class="portfolio__list">
-              <li class="portfolio__list-item list-item">
-                <a href="#" class="list-item__name">Show All <sup>14</sup></a>
-              </li>
-              <li class="portfolio__list-item list-item">
-                <a href="#" class="list-item__name">Design <sup>6</sup></a>
-              </li>
-              <li class="portfolio__list-item list-item">
-                <a href="#" class="list-item__name">Branding <sup>4</sup></a>
-              </li>
-              <li class="portfolio__list-item list-item">
-                <a href="#" class="list-item__name">Illustration <sup>3</sup></a>
-              </li>
-              <li class="portfolio__list-item list-item">
-                <a href="#" class="list-item__name">Motion <sup>1</sup></a>
-              </li>
-            </ul>
             <div class="portfolio__cards">
-              <div class="portfolio__card card">
-                <div class="card__content">
-                  <a href="#" class="card__button">Design</a>
-                  <a href="#" class="card__lable">SOFA</a>
+              <a href="#" class="portfolio__card card-portfolio">
+                <img src="img/portfolio/01.webp" alt="sofa">
+                <div class="card-portfolio__content">
+                  <div class="card-portfolio__category">Design</div>
+                  <div class="card-portfolio__title">SOFA</div>
                 </div>
-                <div class="card__img">
-                  <img src="img/portfolio/01.webp" alt="sofa">
+
+              </a>
+              <a href="#" class="portfolio__card card-portfolio">
+                <img src="img/portfolio/02.webp" alt="KeyBoard">
+                <div class="card-portfolio__content">
+                  <div class="card-portfolio__category">Branding</div>
+                  <div class="card-portfolio__title">KeyBoard</div>
                 </div>
-              </div>
-              <div class="portfolio__card card">
-                <div class="card__content">
-                  <a href="#" class="card__button">Branding</a>
-                  <a href="#" class="card__lable">KeyBoard</a>
+
+              </a>
+              <a href="#" class="portfolio__card card-portfolio">
+                <img src="img/portfolio/03.webp" alt="Work Media image ">
+                <div class="card-portfolio__content">
+                  <div class="card-portfolio__category">Illustration</div>
+                  <div class="card-portfolio__title">Work Media</div>
                 </div>
-                <div class="card__img">
-                  <img src="img/portfolio/02.webp" alt="KeyBoard">
+
+              </a>
+              <a href="#" class="portfolio__card card-portfolio">
+                <img src="img/portfolio/04.webp" alt="sofa">
+                <div class="card-portfolio__content">
+                  <div class="card-portfolio__category">Motion</div>
+                  <div class="card-portfolio__title">DDDone</div>
                 </div>
-              </div>
-              <div class="portfolio__card card">
-                <div class="card__content">
-                  <a href="#" class="card__button">Illustration</a>
-                  <a href="#" class="card__lable">Work Media</a>
-                </div>
-                <div class="card__img">
-                  <img src="img/portfolio/03.webp" alt="Work Media ">
-                </div>
-              </div>
-              <div class="portfolio__card card">
-                <div class="card__content">
-                  <a href="#" class="card__button">Motion</a>
-                  <a href="#" class="card__lable">DDDone</a>
-                </div>
-                <div class="card__img">
-                  <img src="img/portfolio/04.webp" alt="sofa">
-                </div>
-              </div>
+              </a>
 
             </div>
-            <div class="portfolio__button button"><a href="#">Explore More</a></div>
+            <a href="#" class="portfolio__button main-button main-button--center"><span>Explore More</span></a>
           </div>
         </div>
-        <div class="get get--margin-bottom">
+        <div class="get ">
           <div class="get__container">
-            <div class="get__header-page header-page header-page--action">
-              <div class="header-page__lable lable">Get Started</div>
-              <h2 class="header-page__title title title--black title--fz24">We Help Companies
+            <div class="get__header page-header">
+              <div class="page-header__lable">Get Started</div>
+              <h2 class="page-header__title">We Help Companies
                 Move Faster</h2>
-              <a href="#" class="get__button button button--red">Contact Us</a>
+              <a href="#" class="main-button main-button--secondary"><span>Contact Us</span></a>
+            </div>
+            <div class="get__rectangle">
+              <img src="img/get/06_group.png" alt="rectangle">
+            </div>
+
+            <div class="get__image">
+              <img src="img/get/girl.webp" alt="girl">
             </div>
             <div class="get__decor">
-              <img src="img/get/card.svg" alt="template of card">
-            </div>
-            <div class="get__photo">
-              <img src="img/get/cloud.svg" alt="the cloud">
-              <div class="photo-girl">
-                <img src="img/get/girl.webp" alt="girl">
-              </div>
-            </div>
-            <div class="get__decor-gift">
-              <img src="img/get/icon-gift.svg" alt="gift">
+              <img src="img/get/gift.svg" alt="gift">
             </div>
 
           </div>
         </div>
-        <div class="explore explore--margin">
+        <div class="explore">
           <div class="explore__container">
-            <div class="explore__header-page header-page">
-              <div class="header-page__lable lable">Events</div>
-              <h2 class="header-page__title title">Explore Future
+            <div class="explore__page-header page-header">
+              <div class="page-header__lable">Events</div>
+              <h2 class="page-header__title">Explore Future
                 Conferences</h2>
             </div>
             <div class="explore__cards">
               <div class="explore__card card-explore">
                 <div class="card-explore__header">
-                  <div class="card-explore__date-action">
-                    <div class="card-explore__date">3</div>
-                    <div class="card-explore__month-and-year">
+                  <div class="card-explore__date date-card-explore">
+                    <div class="date-card-explore__data">3</div>
+                    <div class="date-card-explore__month-and-year">
                       <div class="card-explore__month">November</div>
                       <div class="card-explore__year">2024</div>
                     </div>
@@ -126,27 +110,25 @@
                     <div class="time__separator"> - </div>
                     <div class="time__end">3.00<span>pm</span></div>
                     <div class="time__icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM7.5 3C7.77614 3 8 3.22386 8 3.5V8.71L11.248 10.566C11.4805 10.7063 11.5586 11.0064 11.4238 11.2422C11.2891 11.478 10.9909 11.5631 10.752 11.434L7.252 9.434C7.09622 9.34502 7.00006 9.1794 7 9V3.5C7 3.22386 7.22386 3 7.5 3Z"
-                          fill="#EF6D58" />
-                      </svg>
+                      <img src="img/explore/time-icon.svg" alt="icon the o'clock">
                     </div>
                   </div>
                 </div>
                 <div class="card-explore__content">
-                  <h3 class="card-explore__title title title--fz24">Design Weeks</h3>
+                  <h3 class="card-explore__title ">Design Weeks</h3>
                   <div class="card-explore__text">
                     <p>Digital agency is a business you hire to outsource your digital.</p>
+                    <p>Digital agency is a business you hire to outsource your digital.</p>
+
                   </div>
                   <a href="#" class="card-explore__link ">Explore Now</a>
                 </div>
               </div>
               <div class="explore__card card-explore">
                 <div class="card-explore__header">
-                  <div class="card-explore__date-action">
-                    <div class="card-explore__date">15</div>
-                    <div class="card-explore__month-and-year">
+                  <div class="card-explore__date date-card-explore">
+                    <div class="date-card-explore__data">15</div>
+                    <div class="date-card-explore__month-and-year">
                       <div class="card-explore__month">November</div>
                       <div class="card-explore__year">2024</div>
                     </div>
@@ -157,16 +139,12 @@
                     <div class="time__separator"> - </div>
                     <div class="time__end">8.00<span>pm</span></div>
                     <div class="time__icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM7.5 3C7.77614 3 8 3.22386 8 3.5V8.71L11.248 10.566C11.4805 10.7063 11.5586 11.0064 11.4238 11.2422C11.2891 11.478 10.9909 11.5631 10.752 11.434L7.252 9.434C7.09622 9.34502 7.00006 9.1794 7 9V3.5C7 3.22386 7.22386 3 7.5 3Z"
-                          fill="#EF6D58" />
-                      </svg>
+                      <img src="img/explore/time-icon.svg" alt="icon the o'clock">
                     </div>
                   </div>
                 </div>
                 <div class="card-explore__content">
-                  <h3 class="card-explore__title title title--fz24">Interior Design</h3>
+                  <h3 class="card-explore__title">Interior Design</h3>
                   <div class="card-explore__text">
                     <p>Marketing efforts, instead of handling in-house.</p>
                   </div>
@@ -175,9 +153,9 @@
               </div>
               <div class="explore__card card-explore">
                 <div class="card-explore__header">
-                  <div class="card-explore__date-action">
-                    <div class="card-explore__date">2</div>
-                    <div class="card-explore__month-and-year">
+                  <div class="card-explore__date date-card-explore">
+                    <div class="date-card-explore__data">2</div>
+                    <div class="date-card-explore__month-and-year">
                       <div class="card-explore__month">December</div>
                       <div class="card-explore__year">2021</div>
                     </div>
@@ -188,16 +166,12 @@
                     <div class="time__separator"> - </div>
                     <div class="time__end">2.00<span>pm</span></div>
                     <div class="time__icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM7.5 3C7.77614 3 8 3.22386 8 3.5V8.71L11.248 10.566C11.4805 10.7063 11.5586 11.0064 11.4238 11.2422C11.2891 11.478 10.9909 11.5631 10.752 11.434L7.252 9.434C7.09622 9.34502 7.00006 9.1794 7 9V3.5C7 3.22386 7.22386 3 7.5 3Z"
-                          fill="#EF6D58" />
-                      </svg>
+                      <img src="img/explore/time-icon.svg" alt="icon the o'clock">
                     </div>
                   </div>
                 </div>
                 <div class="card-explore__content">
-                  <h3 class="card-explore__title title title--fz24">The F design events</h3>
+                  <h3 class="card-explore__title">The F design events</h3>
                   <div class="card-explore__text">
                     <p>Provide your business with a variety of digital solutions to promote.</p>
                   </div>
@@ -205,45 +179,57 @@
                 </div>
               </div>
             </div>
-            <a href="" class="explore__button button">Explore More</a>
+            <a href="" class="explore__button main-button">Explore More</a>
           </div>
         </div>
         <div class="team">
           <div class="team__container">
-            <div class="team__header-page header-page header-page--align-left">
-              <div class="header-page__lable lable">Our Team</div>
-              <h2 class="header-page__title title">Team of Designers
-                and Developers</h2>
+            <div class="team__page-header page-header">
+              <div class="page-header__content">
+                <div class="page-header__lable">Our Team</div>
+                <h2 class="page-header__title">Team of Designers
+                  and Developers</h2>
+              </div>
+              <div class="page-header__buttons">
+                <button class="page-header__button page-header__button--prew" type="button"></button>
+                <button class="page-header__button page-header__button--next" type="button"></button>
+              </div>
             </div>
-            <div class="team__cards">
-              <div class="team__card card-team">
-                <div class="card-team__img">
+            <div class="team__slides">
+              <div class="slide-team">
+                <div class="slide-team__image">
                   <img src="img/team/01.webp" alt="team member">
                 </div>
-                <div class="card-team__name">Azah Anyeni</div>
-                <div class="card-team__position">Designer</div>
+                <h3 class="slide-team__title">Azah Anyeni</h3>
+                <div class="slide-team__work-position">Designer</div>
               </div>
-              <div class="team__card card-team">
-                <div class="card-team__img">
+              <div class="slide-team">
+                <div class="slide-team__image">
                   <img src="img/team/03.webp" alt="team member">
                 </div>
-                <div class="card-team__name">Leonardo Oliveira</div>
-                <div class="card-team__position">Illustrator</div>
+                <h3 class="slide-team__title">Leonardo Oliveira</h3>
+                <div class="slide-team__work-position">Illustrator</div>
               </div>
-              <div class="team__card card-team">
-                <div class="card-team__img">
+              <div class="slide-team">
+                <div class="slide-team__image">
                   <img src="img/team/02.webp" alt="team member">
                 </div>
-                <div class="card-team__name">Roelof Bekkenenks</div>
-                <div class="card-team__position">React Developer</div>
+                <h3 class="slide-team__title">Roelof Bekkenenks</h3>
+                <div class="slide-team__work-position">React Developer</div>
               </div>
-              <div class="team__card card-team">
-                <div class="card-team__img">
+              <div class="slide-team">
+                <div class="slide-team__image">
                   <img src="img/team/04.webp" alt="team member">
                 </div>
-                <div class="card-team__name">Izabella Tabakova</div>
-                <div class="card-team__position">Product Designer</div>
+                <h3 class="slide-team__title">Izabella Tabakova</h3>
+                <div class="slide-team__work-position">Product Designer</div>
               </div>
+            </div>
+            <div class="team__slider-pagination">
+              <div class="team__slider-dot team__slider-dot--active"></div>
+              <div class="team__slider-dot"></div>
+              <div class="team__slider-dot"></div>
+
             </div>
           </div>
         </div>
@@ -253,25 +239,27 @@
               <img src="img/founder/01.webp" alt="founder">
             </div>
             <div class="founder__content">
-              <div class="founder__header header-page header-page--align-left">
-                <div class="header-page__lable lable">Founder Words</div>
-                <h2 class="header-page__title title title--fz40">Digital agency is a business you hire to outsource your
+              <div class="founder__header page-header">
+                <div class="page-header__lable ">Founder Words</div>
+                <h2 class="page-header__title ">Digital agency is a business you hire to outsource
+                  your
                   digital
                   marketing efforts</h2>
               </div>
               <div class="founder__name">Ren Delan</div>
               <div class="founder__position">Founder</div>
-              <div class="founder__decor">
-                <img src="img/founder/shape.svg" alt="decor">
-              </div>
+
             </div>
           </div>
         </div>
       </main>
       <footer class="footer">
         <div class="footer__container">
-          <p class="footer-text">© 2024 - Vasyl</p>
-          <p class="footer-text">All rights reserved</p>
+          <div class="footer__text">
+            <p>© 2024 - Vasyl</p>
+            <p>All rights reserved</p>
+          </div>
+
         </div>
       </footer>
     </div>
