--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -54,12 +54,12 @@
 
               </a>
               <a href="#" class="portfolio__card card-portfolio">
-                <pictures>
+                <picture>
                   <source
                     srcset="img/portfolio/02_02.webp 1.5x, img/portfolio/02_2x.webp 2x, img/portfolio/02_3x.webp 3x,img/portfolio/02_4x.webp 4x"
                     media="(min-width: 768px)">
                   <img src="img/portfolio/02.webp" alt="KeyBoard">
-                </pictures>
+                </picture>
 
                 <div class="card-portfolio__content">
                   <div class="card-portfolio__category">Branding</div>
