made amendments to lesson 18 according to recomendations

--- a/lesson_18/index.html
+++ b/lesson_18/index.html
@@ -47,6 +47,9 @@
 
 
                   </div>
+                  <div class="introduce__content-image">
+                     <img src="img/introduce/01.svg" alt="image">
+                  </div>
                </div>
 
             </div>
