added cart in project mockup

--- a/Mockup/index.html
+++ b/Mockup/index.html
@@ -45,24 +45,24 @@
                   <article class="products__item item-product">
                      <div class="item-product__header  header-item-product">
                         <h2 class=" header-item-product__title title--product">Category</h2>
-                        <a href="#" class="header-item-product__link">
+                        <a href="search.html" class="header-item-product__link" target="_blank">
                            <img src="img/icons/Backward.svg" alt="icon arrow">
                         </a>
                      </div>
                      <div class="item-product__slider slider">
-                        <a href="#" class="slider__item item-slider">
+                        <a href="search.html" class="slider__item item-slider">
                            <h3 class="item-slider__title">Jackets</h3>
                            <div class="item-slider__img">
                               <img src="img/01.webp" alt="photo">
                            </div>
                         </a>
-                        <a href="#" class="slider__item item-slider">
+                        <a href="search.html" class="slider__item item-slider">
                            <h3 class="item-slider__title">Jackets</h3>
                            <div class="item-slider__img">
                               <img src="img/01.webp" alt="photo">
                            </div>
                         </a>
-                        <a href="#" class="slider__item item-slider">
+                        <a href="search.html" class="slider__item item-slider">
                            <h3 class="item-slider__title">Jackets</h3>
                            <div class="item-slider__img">
                               <img src="img/01.webp" alt="photo">
