--- a/Mockup/index .html
+++ b/Mockup/index .html
@@ -4,8 +4,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Prelowed</title>
       <link rel="stylesheet" href="css/style.css">
-      <title>Mockup</title>
    </head>
 
    <body>
@@ -15,28 +15,29 @@
                <div class="header__logo logo">
                   <span>p</span><span>r</span><span>e</span><span>l</span><span>o</span><span>w</span><span>e</span><span>d</span>
                </div>
-               <div class="header__actions actions">
-                  <button class="actions__item" type="button"> <img src="img/icons/Search.svg"
+               <div class="header__actions actions-header">
+                  <button class="actions-header__item button-actions" type="button"> <img src="img/icons/Search.svg"
                         alt="button search"></button>
-                  <button class="actions__item" type="button"> <img src="img/icons/Filter.svg"
+                  <button class="actions-header__item button-actions" type="button"> <img src="img/icons/Filter.svg"
                         alt="button filter"></button>
                </div>
             </div>
          </header>
+
          <main class="main">
-            <section class="hero hero--margineBlockEnd">
-               <div class="hero__container">
-                  <h1 class="hero__title title">Search or scan <br>
+            <section class="search search--margineBlockEnd">
+               <div class="search__container">
+                  <h1 class="search__title title">Search or scan <br>
                      What you’re looking for</h1>
-                  <div class="hero__search search-hero">
-                     <div class="search-hero__input input-search-hero">
-                        <div class="input-search-hero__img">
+                  <div class="search__actions actions-search">
+                     <div class="actions-search__input input-actions-search">
+                        <div class="input-actions-search__img">
                            <img src="img/icons/Search.svg" alt="search icon">
                         </div>
-                        <input type="text" placeholder="Item you want to search for" class="input-search-hero__input">
+                        <input type="text" placeholder="Item you want to search for">
                      </div>
-                     <button class="search-hero__button" type="submit"><img src="img/icons/Scan.svg"
-                           alt="icon scan"></button>
+                     <button class="input-actions-search__button button-actions button-actions--scan" type="submit"><img
+                           src="img/icons/Scan.svg" alt="icon scan"></button>
                   </div>
                </div>
             </section>
@@ -45,24 +46,24 @@
                   <article class="products__item item-product">
                      <div class="item-product__header  header-item-product">
                         <h2 class=" header-item-product__title title--product">Category</h2>
-                        <a href="search.html" class="header-item-product__link" target="_blank">
-                           <img src="img/icons/Backward.svg" alt="icon arrow">
+                        <a href="category.html" class="header-item-product__link errow-link">
+                           <img src=" img/icons/Backward.svg" alt="icon arrow">
                         </a>
                      </div>
                      <div class="item-product__slider slider">
-                        <a href="search.html" class="slider__item item-slider">
+                        <a href="#" class="slider__item item-slider">
                            <h3 class="item-slider__title">Jackets</h3>
                            <div class="item-slider__img">
                               <img src="img/01.webp" alt="photo">
                            </div>
                         </a>
-                        <a href="search.html" class="slider__item item-slider">
+                        <a href="#" class="slider__item item-slider">
                            <h3 class="item-slider__title">Jackets</h3>
                            <div class="item-slider__img">
                               <img src="img/01.webp" alt="photo">
                            </div>
                         </a>
-                        <a href="search.html" class="slider__item item-slider">
+                        <a href="#" class="slider__item item-slider">
                            <h3 class="item-slider__title">Jackets</h3>
                            <div class="item-slider__img">
                               <img src="img/01.webp" alt="photo">
@@ -73,7 +74,7 @@
                   <article class="products__item item-product">
                      <div class="item-product__header  header-item-product">
                         <h2 class=" header-item-product__title title--product">Brands</h2>
-                        <a href="#" class="header-item-product__link">
+                        <a href="brands.html" class="header-item-product__link errow-link">
                            <img src="img/icons/Backward.svg" alt="icon arrow">
                         </a>
                      </div>
@@ -101,7 +102,7 @@
                   <article class="products__item item-product">
                      <div class="item-product__header  header-item-product">
                         <h2 class=" header-item-product__title title--product">Popular</h2>
-                        <a href="#" class="header-item-product__link">
+                        <a href="#" class="header-item-product__link errow-link">
                            <img src="img/icons/Backward.svg" alt="icon arrow">
                         </a>
                      </div>
@@ -128,25 +129,28 @@
                   </article>
                </div>
             </div>
-         </main>
 
-         <aside class="modal">
-            <div class="modal__container">
-               <div class="modal__actions">
-                  <a href="#" class="modal__icon"><img src="img/icons/Category.svg" alt="icon category"></a>
-                  <a href="#" class="modal__icon modal__icon-home"><img src="img/icons/Home.svg" alt="icon home">
-                     <span>Explore</span>
-                  </a>
-                  <a href="#" class="modal__icon"><img src="img/icons/Profile.svg" alt="icon profile"></a>
+
+         </main>
+         <footer class="footer">
+            <div class="footer__container">
+               <div class="modal">
+                  <div class="modal__actions">
+                     <a href="#" class="modal__icon"><img src="img/icons/Category.svg" alt="icon category"></a>
+                     <a href="#" class="modal__icon modal__icon-home"><img src="img/icons/Home.svg" alt="icon home">
+                        <span>Explore</span>
+                     </a>
+                     <a href="my-pages.html" class="modal__icon"><img src="img/icons/Profile.svg"
+                           alt="icon profile"></a>
+                  </div>
                </div>
 
-            </div>
-         </aside>
-         <footer class="footer">
-            footer
-         </footer>
-      </div>
 
+            </div>
+         </footer>
+
+      </div>
+      <script src="js/script.js"></script>
    </body>
 
 </html>
